--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wbpack Exercise</title>
+    <title>Document</title>
+    <script src="https://unpkg.com/lodash@4.17.20"></script>
+    <script
+      src="https://kit.fontawesome.com/dfaf9de4b6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>Hello webpack!</h1>
+    <div class="todo-container">
+      <div class="todo-header">
+        <div class="header">
+          <h1>Today's Todo</h1>
+          <i class="fa-solid fa-rotate"></i>
+        </div>
+        <form action="#">
+          <input type="text" name="" id="" placeholder="Add to your list" />
+          <i class="fa-solid fa-angle-right"></i>
+        </form>
+      </div>
+      <footer>Clear all Completed</footer>
+    </div>
+
+    <script src="../dist/main.js"></script>
   </body>
 </html>
