Implemented required changes

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
             name="content"
             id="content"
             placeholder="Add Todo"
+            required
           />
           <button type="submit"><i class="fa-solid fa-angle-right"></i></button>
         </form>
