Added clearAll function

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <div id="todo-list"></div>
       </div>
 
-      <footer>Clear all Completed</footer>
+      <footer class="clear">Clear all Completed</footer>
     </div>
   </body>
 </html>
